# react-native-root-jail-detect

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  RootJailDetect.podspec  lefthook.yml  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/src/main/java/com/rootjaildetect/: RootDetection.kt  RootJailDetectModule.kt  RootJailDetectPackage.kt
android/src/main/java/com/rootjaildetect/checkers/: DebuggerChecker.kt  EmulatorChecker.kt  FridaChecker.kt  HookFrameworkChecker.kt  NativeSecurityChecker.kt  RootChecker.kt
android/src/main/java/com/rootjaildetect/constants/: SecurityConstants.kt
android/src/main/java/com/rootjaildetect/native/: CMakeLists.txt  native_security.cpp
android/src/main/java/com/rootjaildetect/utils/: CommandExecutor.kt  SystemPropertyReader.kt
android/src/main/java/com/rootjaildetect/watchdog/: ProtectionMode.kt  SecurityWatchdog.kt
cpp/: HybridRootJailDetect.cpp  HybridRootJailDetect.hpp  HybridSecurityWatchdog.cpp  HybridSecurityWatchdog.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: Podfile  RootJailDetectExample-Bridging-Header.h
example/src/: App.tsx
ios/: JailbreakDetection.swift  RootJailDetect.h  RootJailDetect.m  RootJailDetect.mm  RootJailDetect.swift
ios/Checkers/: AdvancedSecurityChecker.swift  DebuggerChecker.swift  FridaChecker.swift  HookFrameworkChecker.swift  (+2 more)
src/: NativeRootJailDetect.ts  index.tsx  types.ts  wrappers.ts
(+28 files in other folders)
